# csad2526ki404DmytroIvaniuk12

./: CMakeLists.txt  CopilotPrompt4.txt  CopilotPrompt5.txt  README.md  SPI_Master.v  SPI_Slave.v  ci.bat  ci.sh  tb_SPI.v
.github/workflows/: ci.yml
tests/: unit_tests.cpp
